---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: ????
  Changes:
    - Use LuaItemPrototype::get_module_effects
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2025-09-06
  Changes:
    - GUI qualifier now is a table, should make it easier to write custom UI
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2025-08-25
  Bugfixes:
    - Fixed crash in SE 0.7 when encountering long naquium heat pipe
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2025-08-06
  Changes:
    - Made necessary adjustments to boiler fluid mechanics that changed in 2.0.63
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2025-07-15
  Changes:
    - Improved speed calculation for asteroid-collector using all the new exposed properties
    - Improved energy consumption of asteroid-collector (arms only consume energy for a single tick)
    - Removed big-data-string2 dependency, instead uses new API methods
    - Added support for the new quality modding capabilities
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2025-06-29
  Changes:
    - Use LuaForce::beacon_distribution_modifier
  Bugfixes:
    - Fixed edge case when beacon supply area exactly touches the receiver's bounding box
    - Fixed incorrect calculation when ignored_by_productivity is combined with amount_min/amount_max or extra_count_fraction
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-06-26
  Changes:
    - Improved filters for asteroid-collector: read all filters, ignore if controlled by circuit
  Bugfixes: