@@ -3,6 +3,7 @@ Version: 0.4.4
 Date: ????
   Changes:
     - Use LuaItemPrototype::get_module_effects
+    - Support generator with burns_fluid=true
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.3
 Date: 2025-09-06
